--- a/css/main.css
+++ b/css/main.css
@@ -17,3 +17,21 @@ div b, div i {
 /* div, .name-class, #id, div p {
 	color: brown; 
 } */ 
+
+/* Псевдоклассы и псевдоэлементы */
+
+.main_link {
+	color: red;
+	text-decoration: none;
+}
+
+.main_link:hover {
+	color: blue;
+	text-decoration: overline;
+	text-decoration-color: orange;
+	cursor: pointer;
+}
+
+.main_link:active {
+	text-decoration: line-through;
+}
