--- a/css/main.css
+++ b/css/main.css
@@ -98,3 +98,13 @@ input:focus {
 	color: red;
 }
 
+/* Стили для текста */
+
+.main_text {
+	color: #000;
+	text-align: right;
+	font-size: 1.2em;
+	font-style: italic;
+	font-weight: bold;
+}
+
