--- a/css/third.css
+++ b/css/third.css
@@ -11,6 +11,17 @@ body {
 	background-attachment: fixed;
 }
 
+#second a {
+	position: absolute;
+	top: 75px;
+	left: 13px; 
+	background: rgba(0,0,0,0.7);
+	color: white;
+	padding: 5px 10px; 
+	text-decoration: none;
+	border-radius: 5px; 
+}
+
 #second {
 	height: 2000px; 
 }	
