--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Sansita:ital,wght@0,400;0,700;0,800;0,900;1,400;1,700;1,800;1,900&display=swap');
+
 body {
 	background-color: #f2f0f0;
 	color: grey; 
@@ -105,6 +107,13 @@ input:focus {
 	text-align: right;
 	font-size: 1.2em;
 	font-style: italic;
-	font-weight: bold;
+	font-weight: 300;
+	font-family: "Sansita";
+
+	text-transform: capitalize; 
+	word-spacing: 20px; 
+	letter-spacing: 2px;
+	line-height: 20px;
+	cursor: pointer; 
 }
 
