--- a/css/second.css
+++ b/css/second.css
@@ -1,3 +1,8 @@
+* {
+	margin: 0;
+	padding: 0; 
+}
+
 #bobik {
 	width: 300px;
 	height: 300px; 
@@ -14,4 +19,21 @@
 	background: url("../images/baton.png");
 	background-size: contain;
 	position: absolute;
+}
+
+.block {
+	
+	background: yellow;
+	height: 200px;
+	width: 300px;
+	border: 4px dotted orange; 
+	border-top: 0; 
+	border-top-style: solid;
+	border-style: double;
+	border-radius: 15px 50%;
+	opacity: 0.8;
+	margin: 20px 50px; 
+	padding: 20px;  
+	display: block;
+
 }
