--- a/css/second.css
+++ b/css/second.css
@@ -3,12 +3,22 @@
 	padding: 0; 
 }
 
+a, h2 {
+	margin: 20px; 
+}
+
+.container {
+	display: flex;
+	justify-content: space-between;
+	margin: 20px, 50px; /*отступы от краёв*/
+}
+
 #bobik {
 	width: 300px;
 	height: 300px; 
 	background: url('https://static.wikia.nocookie.net/sojuzmultfilm/images/1/10/%D0%91%D0%BE%D0%B1%D0%B8%D0%BA_%28%D0%91%D0%BE%D0%B1%D0%B8%D0%BA_%D0%B2_%D0%B3%D0%BE%D1%81%D1%82%D1%8F%D1%85_%D1%83_%D0%91%D0%B0%D1%80%D0%B1%D0%BE%D1%81%D0%B0%29.png/revision/latest?cb=20200731160531&path-prefix=ru') no-repeat center center;
 	background-size: contain;
-	position: absolute;
+	margin: 20px;
 	top: 10;
 	right: 2%;
 }
@@ -18,22 +28,19 @@
 	height: 300px;
 	background: url("../images/baton.png");
 	background-size: contain;
-	position: absolute;
+	margin: 20px; 
 }
 
 .block {
-	
 	background: yellow;
 	height: 200px;
 	width: 300px;
-	border: 4px dotted orange; 
+	border: 4px double orange; 
 	border-top: 0; 
 	border-top-style: solid;
-	border-style: double;
 	border-radius: 15px 50%;
 	opacity: 0.8;
 	margin: 20px 50px; 
 	padding: 20px;  
 	display: block;
-
 }
